--- a/src/Presentation/Nop.Web/Administration/Views/Common/Maintenance.cshtml
+++ b/src/Presentation/Nop.Web/Administration/Views/Common/Maintenance.cshtml
@@ -116,7 +116,7 @@
         </tr>
         <tr>
             <td colspan="2">
-                <input type="submit" name="delete-exported-files" class="k-button" value="@T("Admin.Common.Delete")" />
+                <input type="submit" name="delete-exported-files" class="k-button" value="@T("Admin.Common.Delete")"/>
             </td>
         </tr>
         @if (Model.DeleteExportedFiles.NumberOfDeletedFiles.HasValue)
@@ -128,4 +128,70 @@
             </tr>
         }
     </table>
+    <p>
+        <hr/>
+    </p>
+    <style type="text/css">
+
+        table.backup th {
+            background-color: RGB(184, 204, 228);
+            width: 20%
+        }
+        table.backup td {
+            text-align: center;
+        }
+        table.backup td.left {
+            text-align: left;
+            font-style: italic;
+            font-weight: bold;
+        }
+    </style>
+    <div id="backup-data"></div>
+    <table width="100%" class="backup">
+        <thead>
+        <tr>
+            <td colspan="4" style="border: none; text-align: left"><strong>@T("Admin.System.Maintenance.BackupDatabase.BackupsDatabases")</strong></td>
+            <td style="border: none; text-align: right;">
+                <input type="submit" name="backup-database" class="k-button" value="@T("Admin.System.Maintenance.BackupDatabase.BackupNow")"/>
+            </td>
+        </tr>
+        <tr style="border: 1px solid">
+            <th>@T("Admin.System.Maintenance.BackupDatabase.FileName")</th>
+            <th>@T("Admin.System.Maintenance.BackupDatabase.FileSize")</th>
+            <th>@T("Admin.System.Maintenance.BackupDatabase.Download")</th>
+            <th>@T("Admin.System.Maintenance.BackupDatabase.Restore")</th>
+            <th>@T("Admin.System.Maintenance.BackupDatabase.Delete")</th>
+        </tr>
+        </thead>
+        <tbody>
+        @foreach (var file in Model.BackupFiles)
+        {
+            <tr>
+                <td class="left">
+                    @file.Name
+                </td>
+                <td>
+                    @string.Format("{0:F2} Mb", @file.Length/1024f/1024f)
+                </td>
+                <td>
+                    <input type="submit" class="k-button" value="@T("Admin.System.Maintenance.BackupDatabase.Download")" onclick='DownloadBackup("@file.Name", "download-backup")'/>
+                </td>
+                <td>
+                    <input type="submit" class="k-button" value="@T("Admin.System.Maintenance.BackupDatabase.Restore")" onclick='DownloadBackup("@file.Name", "restore-backup")'/>
+                </td>
+                <td>
+                    <input type="submit" class="k-button" value="@T("Admin.System.Maintenance.BackupDatabase.Delete")" onclick='DownloadBackup("@file.Name", "delete-backup")'/>
+                </td>
+            </tr>
+        }
+
+        </tbody>
+    </table>
+
+    <script type="text/javascript">
+       function DownloadBackup(fileName, action) {
+           $("#backup-data").append('<input type="hidden" name="buckupFileName" value="' + fileName + '"/>');
+           $("#backup-data").append('<input type="hidden" name="action" value="' + action + '"/>');
+       };
+    </script>
 }
